--- a/shared/latex/unsupervised/section.yml
+++ b/shared/latex/unsupervised/section.yml
@@ -46,6 +46,15 @@ flavors:
     - questions
     - tp-dim-reduce
     - tp-clustering
+  dimreduce:
+    - dimensionality-reduction
+    - pca-lda
+    - demo-dim-reduce
+    - questions
+    - anomaly-detection-light
+    - demo-anomaly-detect
+    - questions
+    - tp-dim-reduce
   bda:
     - introduction
     - dimensionality-reduction
