init orsys/INTRA/nextflow. section supervised/bayes A FAIRE

--- a/shared/latex/about/section.yml
+++ b/shared/latex/about/section.yml
@@ -20,6 +20,11 @@ flavors:
     - ressources-orsys
     - tour2table
     - horaires-4j-orsys
+  mlbdnn:
+    - formateur-fmg
+    - description-mlbdnn
+    - ressources-orsys
+    - tour2table
   bda:
     - formateur-fmg
     - description-bda
