Use deckz 5, change section config filenames
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/natixis/j1/about/about.yml
+++ b/orsys/INTRA/natixis/j1/about/about.yml
@@ -1,5 +1,4 @@
-title: Votre formation
-default_titles:
+default_titles: null
 flavors:
   bda:
     - formateur-fmg
@@ -7,5 +6,5 @@ flavors:
     - ressources-orsys
     - tour2table
     - horaires-4j-orsys
-version: 2
-
+title: Votre formation
+version: 3
