--- a/shared/latex/recommander-system/recommander-system.yml
+++ b/shared/latex/recommander-system/recommander-system.yml
@@ -1,12 +1,11 @@
-title: "Système de Recommendation"
 default_titles:
-  intro: "Systèmes de Recommendation"
-  filtrage-colaboratif: "Filtrage Collaboratif"
-  filtrage-colaboratif-user-based: "Filtrage Collaboratif 'User Based'"
-  filtrage-colaboratif-item-based: "Filtrage Collaboratif 'Item Based'"
-  filtrage-colaboratif-extend: "Filtrage Collaboratif - Aujourd'hui"
-  filtrage-colaboratif-conclusion: "Conclusions"
-  tp-recommander-system: "Travaux Pratiques"
+  filtrage-colaboratif: Filtrage Collaboratif
+  filtrage-colaboratif-conclusion: Conclusions
+  filtrage-colaboratif-extend: Filtrage Collaboratif - Aujourd'hui
+  filtrage-colaboratif-item-based: Filtrage Collaboratif 'Item Based'
+  filtrage-colaboratif-user-based: Filtrage Collaboratif 'User Based'
+  intro: Systèmes de Recommendation
+  tp-recommander-system: Travaux Pratiques
 flavors:
   all:
     - intro
@@ -25,4 +24,5 @@ flavors:
     - filtrage-colaboratif-conclusion
     - questions
     - tp-recommander-system
-version: 2
+title: Système de Recommendation
+version: 3
