--- a/shared/latex/supervised/supervised.yml
+++ b/shared/latex/supervised/supervised.yml
@@ -1,5 +1,9 @@
 default_titles:
   classification: Classification
+  bayes-inference: Inférence et Apprentissage Bayésiens
+  proba-rappel: Probabilités
+  bayes-networks: "Réseaux Bayésiens"
+  tp-bayes: "Travaux Pratique : Réseaux Bayésiens"
   cost-error-function: Fonction de Coût/Erreur
   demo-gradient-boosting: Démo Sklearn
   demo-random-forest: Démo Sklearn
@@ -20,12 +24,17 @@ default_titles:
   svm: Support Vector Machine
   tp-random-forest: "Travaux Pratiques : Random Forest"
   tp-random-forest-text: "Travaux Pratiques : Random Forest"
-  tp-reg-lin-poly: "Travaux Pratiques : Régression Linéaire"
-  tp-svm: "Travaux Pratiques : SVM"
-  tp-svm-text: "Travaux Pratiques : SVM"
   trees: Arbres de décision
+  tp-reg-lin-poly: "Travaux Pratiques : Régression Linéaire"
+  gradient-boosting: Gradient Boosting
+  demo-gradient-boosting: Démo Sklearn
+  svm: Support Vector Machine
+  demo-svm: Démo Sklearn
+  tp-svm: "Travaux Pratiques : SVM (TODO)"
+  tp-svm-text: "Travaux Pratiques : SVM"
 flavors:
   all:
+    - proba-rappel
     - naive-bayes
     - regression-lineaire
     - cost-error-function
@@ -57,6 +66,7 @@ flavors:
     - hmm
     - modeles-graphiques
   standard:
+    - proba-rappel
     - naive-bayes
     - regression-lineaire
     - cost-error-function
@@ -75,6 +85,15 @@ flavors:
     - questions
     - demo-random-forest
     - tp-random-forest
+  bayes:
+    - naive-bayes
+    - proba-rappel
+    - bayes-inference
+    - gaussian-mixture
+    - modeles-graphiques
+    - bayes-networks
+    - markov-model
+    - hmm
   standard-nobayes:
     - regression-lineaire
     - cost-error-function
@@ -94,6 +113,7 @@ flavors:
     - demo-random-forest
     - tp-random-forest
   text:
+    - proba-rappel
     - naive-bayes
     - regression-lineaire
     - cost-error-function
