Fix missing bluelink calls except in intras and mlweek
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/tools/tools.yml
+++ b/shared/latex/tools/tools.yml
@@ -1,6 +1,6 @@
 default_titles:
   anaconda: Anaconda
-  arXiv: ArXiv
+  arXiv: arXiv
   cloud-computing: Cloud computing
   demo-spark-tf-keras-cnn: Démonstration de Keras sur Spark
   github: GitHub
