--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ homepage = "https://github.com/m09/formations"
 python = "^3.6"
 Pygments = "^2.6.1"
 deckz = "^6.0.0"
+jupyter = "^1.0.0"
+jupyter_nbextensions_configurator = "^0.4.1"
+matplotlib = "^3.3.2"
+jupyterlab = "^2.2.8"
 
 [build-system]
 requires = ["poetry>=0.12"]
