--- a/orsys/INTRA/natixis/targets.yml
+++ b/orsys/INTRA/natixis/targets.yml
@@ -12,21 +12,23 @@
     - questions
 
 - name: j2
-  title: Jour 2 --- Algorithmes 1/2
+  title: Jour 2 --- Apprentissage supervisé
   sections:
     - path: supervised
       flavor: standard
     - questions
 
 - name: j3
-  title: Jour 3 --- Algorithmes 2/2
+  title: Jour 3 --- Apprentissage non supervisé
   sections:
     - path: unsupervised
-      flavor: bda
+      flavor: natixis
     - questions
-
+    - path: sequential-data
+      flavor: light
+    - questions
 - name: j4
-  title: Jour 4 --- Ingénierie
+  title: Jour 4 --- Réseaux de neurones \& séries temporelles
   sections:
     - title: Réseaux de Neurones
       path: neural-networks
