--- a/shared/latex/tf-keras-intro/tf-keras-intro.yml
+++ b/shared/latex/tf-keras-intro/tf-keras-intro.yml
@@ -10,7 +10,8 @@ flavors:
     - tf-intro
     - keras-intro
   keras-pur:
-    - keras-intro
+    - keras-intro: Principes \& API
+    - neural-networks/tp-nn: Travaux Pratiques
   tf-pur:
     - tf-intro
     - tf-reg-lin
