Finish the pass over day 1 of DPL
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/dpl/targets.yml
+++ b/orsys/dpl/targets.yml
@@ -16,7 +16,7 @@
     - path: big-questions
       flavor: full
 
-    - title: "Travaux Pratiques~: Réseau de neurones avec TensorFlow"
+    - title: Travaux Pratiques --- Réseau de neurones avec TensorFlow
       path: neural-networks
       flavor: tp-tf-pur
 
