--- a/shared/latex/tf-keras-intro/tf-keras-intro.yml
+++ b/shared/latex/tf-keras-intro/tf-keras-intro.yml
@@ -11,6 +11,7 @@ flavors:
     - keras-intro
   keras-pur:
     - keras-intro: Principes \& API
+    - questions
     - neural-networks/tp-nn: Travaux Pratiques
   tf-pur:
     - tf-intro: null
