Start pass on Day 3 DPL
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/dpl/targets.yml
+++ b/orsys/dpl/targets.yml
@@ -47,7 +47,7 @@
       path: sequential-data
       flavor: intro
 
-    - title: Réseaux récurrents
+    - title: Réseaux de neurones récurrents
       path: neural-networks
       flavor: recurrent
 
