--- a/shared/latex/natural-language-processing/natural-language-processing.yml
+++ b/shared/latex/natural-language-processing/natural-language-processing.yml
@@ -61,5 +61,5 @@ flavors:
     - vectors
     - questions
     - tp-text-features-engineering
-title: Le traitement du texte
+title: Traitement du texte
 version: 3
